fix(FAQ): updated the preview section on mobile

--- a/src/components/FAQ/styles.css
+++ b/src/components/FAQ/styles.css
@@ -68,6 +68,8 @@
 
 .faq-list li:hover {
     background-color: #f0f0f0;
+    border-radius: 5px;
+    padding-left: 20px;
     color: #000;
 }
 
@@ -187,6 +189,7 @@
 
 .faq-buttons button:hover {
     background-color: #fff;
+    border-radius: 5px;
     color: #000;
 }
 
